# hat

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SESSION_NOTES.md  biome.json  changes.diff  components.json  index.html  package.json  run-with-logs.ps1  tsconfig.app.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature_request.md
.github/workflows/: build.yml  publish.yml
.husky/: pre-commit
scripts/: benchmark-compression.ts  bump-version.ts  setup-libvips-dev.ts  setup-libvips.ts
src/: App.css  App.tsx  bad_ts_test.ts  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/include/: vips.pc
src-tauri/permissions/: app-commands.json  app.toml
src-tauri/src/: bad_rust_test.rs  commands.rs  compression.rs  compressor.rs  config.rs  lib.rs  log.rs  main.rs  platform.rs  processor.rs  testing_hook.rs  tray.rs  vips_init.rs  watcher.rs
src/components/: TitleBar.css  TitleBar.tsx  compression-history-card.tsx  conversion-settings.tsx  drag-overlay.tsx  dropzone.tsx  format-quality-settings.tsx  format-quality-slider.tsx  format-select.tsx  history-filters.tsx  history-list.tsx  option-select.tsx  settings-content.tsx  settings-dialog.tsx  sidebar-history.tsx  sidebar.tsx  statistics-card.tsx  theme-provider.tsx  theme-toggle.tsx  title-bar.tsx
src/components/format-panels/: avif-panel.tsx  heif-panel.tsx  jpeg-panel.tsx  png-panel.tsx  tiff-panel.tsx  types.ts  webp-panel.tsx
src/components/ui/: autocomplete.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  collapsible.tsx  dialog.tsx  input.tsx  popover.tsx  scroll-area.tsx  select.tsx  settings-checkbox.tsx  settings-switch.tsx  slider.tsx  spinner.tsx  switch.tsx  tabs.tsx  toast.tsx  toggle.tsx
src/hooks/: use-compression-events.ts  use-downloads-watcher.ts  use-drag-drop.ts  use-filtered-history.ts  use-watched-folders.ts
src/lib/: commands.ts  format-option-constants.ts  format.ts  types.ts
